ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-api-ingress
  namespace: student-api
spec:
  ingressClassName: traefik
  rules:
    - host: student-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-api-service
                port:
                  number: 3000
